; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/rpc/extr_authdes_prot.c_xdr_authdes_verf.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/rpc/extr_authdes_prot.c_xdr_authdes_verf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.authdes_verf = type { i32, i32 }

@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xdr_authdes_verf(i32* %0, %struct.authdes_verf* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.authdes_verf*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.authdes_verf* %1, %struct.authdes_verf** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load %struct.authdes_verf*, %struct.authdes_verf** %4, align 8
  %7 = getelementptr inbounds %struct.authdes_verf, %struct.authdes_verf* %6, i32 0, i32 1
  %8 = ptrtoint i32* %7 to i32
  %9 = call i32 @xdr_opaque(i32* %5, i32 %8, i32 4)
  %10 = call i32 @ATTEMPT(i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load %struct.authdes_verf*, %struct.authdes_verf** %4, align 8
  %13 = getelementptr inbounds %struct.authdes_verf, %struct.authdes_verf* %12, i32 0, i32 0
  %14 = ptrtoint i32* %13 to i32
  %15 = call i32 @xdr_opaque(i32* %11, i32 %14, i32 4)
  %16 = call i32 @ATTEMPT(i32 %15)
  %17 = load i32, i32* @TRUE, align 4
  ret i32 %17
}

declare dso_local i32 @ATTEMPT(i32) #1

declare dso_local i32 @xdr_opaque(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
